--- a/src/Contact/contact.styles.scss
+++ b/src/Contact/contact.styles.scss
@@ -171,7 +171,7 @@
         position: absolute;
         color: #F7F7F7;
         font-size: 4vw;
-        top: 893vh;
+        top: 918vh;
         font-family: 'Abhaya Libre', sans-serif;
         text-align: center;
       
